Kubernetes/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: projectns
spec:
  replicas: 1
  selector:
     matchLabels:
       app: frontend
  template:
    metadata:
     labels:
       app: frontend
    spec:
      containers:
        - name: frontend
          image: 820171506892.dkr.ecr.us-east-1.amazonaws.com/frontend:latest
          ports:
          - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: projectns
spec:
  selector:
    app: frontend
  ports:
  - port: 80         # Service port
    targetPort: 80    # Container port
  type: NodePort        # or LoadBalancer / Ingress
