Kubernetes/phoenix-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phoenix
  namespace: projectns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phoenix
  template:
    metadata:
      labels:
        app: phoenix
    spec:
      containers:
        - name: phoenix
          image: arizephoenix/phoenix:0.7.0
          ports:
            - containerPort: 6006
---
apiVersion: v1
kind: Service
metadata:
  name: phoenix-service
  namespace: projectns
spec:
  selector:
    app: phoenix
  ports:
    - port: 6006
      targetPort: 6006
  type: ClusterIP
